--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,22 @@
+html {
+	background: linear-gradient(170deg, rgb(130, 216, 245), rgb(56, 56, 224) 80%)
+		no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
+body {
+	margin: 0px;
+	padding: 0px;
+}
+
 .App {
+	margin: 0;
 	text-align: center;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
 }
