--- a/src/components/game.css
+++ b/src/components/game.css
@@ -7,6 +7,7 @@
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	column-gap: 0.5rem;
+	height: 150px;
 }
 
 .result-section {
@@ -23,9 +24,32 @@
 	display: flex;
 	padding-left: 20px;
 	align-items: center;
-	width: 180px;
+	width: 200px;
 	height: 50px;
 	background-color: rgb(255, 255, 255);
 	border-radius: 10px;
 	margin-bottom: 20px;
+	border: 1px solid;
+	box-shadow: 2px 3px 8px #888888;
+	font-size: large;
+	font-family: "Kanit", sans-serif;
+}
+
+.grid-operations button {
+	width: 40px;
+	height: 40px;
+	padding: 5px 15px;
+	border: transparent;
+	background-color: rgb(45, 202, 202);
+	font-size: large;
+	text-align: center;
+}
+.grid-operations button:hover {
+	width: 40px;
+	height: 40px;
+	padding: 5px 15px;
+	border: transparent;
+	background-color: rgb(27, 168, 168);
+	font-size: large;
+	text-align: center;
 }
